Changes to accomodate system font on multiple OSes
Following this:

https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/#details-of-approach-b

--- a/src/popup.html
+++ b/src/popup.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <style>
       body {
-        font-family: system, -apple-system, '.SFNSDisplay-Regular', 'Helvetica Neue', 'Lucida Grande';
+        font-family:
+          system, -apple-system, '.SFNSDisplay-Regular', BlinkMacSystemFont,  /* Apple system fonts */
+          "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", /* various other system fonts */
+          "Helvetica Neue", sans-serif; /* fallback */
+        font-size: 13px;
+        margin: 0;
         font-size: 13px;
         margin: 0;
       }
